log
Thu, May 12, 2022 11:32:51 PM: 
 sudoku.c | 30 ++++++++++++++++++++++++++++++
 1 file changed, 30 insertions(+)
In file included from test.c:5:0:
sudoku.c: In function 'get_adj_nodes':
sudoku.c:80:11: error: assignment makes pointer from integer without a cast [-Werror=int-conversion]
       aux = copy(n)->sudo[f][c] = i;
           ^
cc1.exe: all warnings being treated as errors
Compilation failed
7cab593
Thu, May 12, 2022 11:33:20 PM: 
 sudoku.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 5/70
1f1b782
Thu, May 12, 2022 11:34:10 PM: 
 sudoku.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  0|0
b2d678d
Thu, May 12, 2022 11:34:33 PM: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
d32e1da
Thu, May 12, 2022 11:34:43 PM: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
3ddbd8e
Thu, May 12, 2022 11:35:19 PM: 
 sudoku.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  2|4
total_score: 15/70
74f4063
Thu, May 12, 2022 11:36:00 PM: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
130a701
Thu, May 12, 2022 11:44:48 PM: 
 sudoku.c | 16 ++++++++++++++++
 1 file changed, 16 insertions(+)
 tests:  2|4
total_score: 15/70
53ead9a
Thu, May 12, 2022 11:45:33 PM: 
 sudoku.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  2|4
total_score: 15/70
8f14aff
Thu, May 12, 2022 11:46:12 PM: 
 sudoku.c | 8 ++++----
 1 file changed, 4 insertions(+), 4 deletions(-)
 tests:  2|4
total_score: 15/70
fc14fb7
Fri, May 13, 2022 12:02:04 AM: 
 sudoku.c | 39 +++++++++++++++++----------------------
 1 file changed, 17 insertions(+), 22 deletions(-)
 tests:  2|4
total_score: 15/70
0edd483
Fri, May 13, 2022 12:02:20 AM: 
 sudoku.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  2|4
total_score: 15/70
9806ee1
Fri, May 13, 2022 12:02:35 AM: 
 sudoku.c | 10 ----------
 1 file changed, 10 deletions(-)
 tests:  2|4
total_score: 15/70
ac24722
Fri, May 13, 2022 12:15:16 AM: 
 sudoku.c | 15 ++++++++++-----
 1 file changed, 10 insertions(+), 5 deletions(-)
 tests:  2|4
total_score: 15/70
ee79226
Fri, May 13, 2022 12:16:45 AM: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|3
total_score: 25/70
3ca4af7
Fri, May 13, 2022 12:17:12 AM: 
 sudoku.c | 2 --
 1 file changed, 2 deletions(-)
 tests:  3|3
total_score: 25/70
809df3e
Fri, May 13, 2022 12:29:06 AM: 
 sudoku.c | 35 +++++++++++++++++++++--------------
 1 file changed, 21 insertions(+), 14 deletions(-)
 tests:  3|3
total_score: 25/70
07d3e7c
Fri, May 13, 2022 12:29:24 AM: 
 sudoku.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:5:0:
sudoku.c: In function 'is_valid':
sudoku.c:58:5: error: expected ';' before '}' token
     }
     ^
Compilation failed
c0c3c3a
Fri, May 13, 2022 12:29:31 AM: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|3
total_score: 25/70
18c9c1b
Fri, May 13, 2022  8:49:09 AM: 
 sudoku.c | 34 ++++++++++++++--------------------
 1 file changed, 14 insertions(+), 20 deletions(-)
In file included from test.c:5:0:
sudoku.c: In function 'is_valid':
sudoku.c:53:11: error: unused variable 'j' [-Werror=unused-variable]
       int j=3*(k%3) + (p%3) ;
           ^
sudoku.c:52:11: error: unused variable 'i' [-Werror=unused-variable]
       int i=3*(k/3) + (p/3) ;
           ^
cc1.exe: all warnings being treated as errors
Compilation failed
6a8d7f4
Fri, May 13, 2022  8:50:15 AM: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  3|3
total_score: 25/70
7f79555
Fri, May 13, 2022  8:59:02 AM: 
 sudoku.c | 25 +++++++++++++++++++++++--
 1 file changed, 23 insertions(+), 2 deletions(-)
In file included from test.c:5:0:
sudoku.c: In function 'is_valid':
sudoku.c:49:7: error: variable 'validFlag' set but not used [-Werror=unused-but-set-variable]
   int validFlag = 1;
       ^~~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
022cec6
Fri, May 13, 2022  8:59:47 AM: 
 sudoku.c | 8 +++++++-
 1 file changed, 7 insertions(+), 1 deletion(-)
 tests:  3|3
total_score: 25/70
b396d53
Fri, May 13, 2022  9:03:32 AM: 
 sudoku.c | 15 +++++++++------
 1 file changed, 9 insertions(+), 6 deletions(-)
 tests:  3|3
total_score: 25/70
37c4fe7
Fri, May 13, 2022  9:03:54 AM: 
 sudoku.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  3|3
total_score: 25/70
2511b8e
Fri, May 13, 2022  9:07:04 AM: 
 sudoku.c | 2 ++
 1 file changed, 2 insertions(+)
In file included from test.c:5:0:
sudoku.c: In function 'is_valid':
sudoku.c:67:9: error: unused variable 'validRow' [-Werror=unused-variable]
     int validRow[20] = {0};
         ^~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
f06ce61
Fri, May 13, 2022  9:07:30 AM: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:0:
sudoku.c: In function 'is_valid':
sudoku.c:48:7: error: unused variable 'validRow' [-Werror=unused-variable]
   int validRow[10] = {0};
       ^~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
3bf0684
Fri, May 13, 2022  9:07:43 AM: 
 sudoku.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  3|3
total_score: 25/70
29775b8
Fri, May 13, 2022  9:08:40 AM: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|3
total_score: 25/70
d48cad2
Fri, May 13, 2022  9:10:24 AM: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|3
total_score: 25/70
ac3c4ee
Fri, May 13, 2022  9:12:50 AM: 
 sudoku.c | 7 +++++++
 1 file changed, 7 insertions(+)
 tests:  3|3
total_score: 25/70
e7d82ac
Fri, May 13, 2022  9:13:08 AM: 
 sudoku.c | 6 ++++++
 1 file changed, 6 insertions(+)
 tests:  3|3
total_score: 25/70
645a51f
Fri, May 13, 2022  9:14:26 AM: 
 sudoku.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  3|3
total_score: 25/70
d40f4a7
Fri, May 13, 2022  9:15:23 AM: 
 sudoku.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  3|3
total_score: 25/70
bd3dbdb
Fri, May 13, 2022  9:17:27 AM: 
 sudoku.c | 9 +++++----
 1 file changed, 5 insertions(+), 4 deletions(-)
 tests:  3|3
total_score: 25/70
303c80b
Fri, May 13, 2022  9:18:00 AM: 
 sudoku.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  3|3
total_score: 25/70
3046ca2
Fri, May 13, 2022  9:21:10 AM: 
 sudoku.c | 13 ++-----------
 1 file changed, 2 insertions(+), 11 deletions(-)
 tests:  3|3
total_score: 25/70
d40c653
Fri, May 13, 2022  9:22:22 AM: 
 sudoku.c | 9 +--------
 1 file changed, 1 insertion(+), 8 deletions(-)
 tests:  3|3
total_score: 25/70
3c47040
Fri, May 13, 2022  9:24:44 AM: 
 sudoku.c | 13 +++++++++++--
 1 file changed, 11 insertions(+), 2 deletions(-)
 tests:  3|3
total_score: 25/70
163016e
Fri, May 13, 2022  9:32:45 AM: 
 sudoku.c | 40 ++++++++++++++++++++++++++++++++++++++++
 1 file changed, 40 insertions(+)
 tests:  3|3
total_score: 25/70
fa7319c
Fri, May 13, 2022  9:33:22 AM: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  3|3
total_score: 25/70
8b0a1e5
Fri, May 13, 2022 11:06:42 AM: 
 sudoku.c | 53 +++++++++++++++++++++++++++++++++++++++++++++--------
 1 file changed, 45 insertions(+), 8 deletions(-)
 tests:  3|3
total_score: 25/70
1cad097
Fri, May 13, 2022 11:08:00 AM: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  3|3
total_score: 25/70
d777174
